--- a/web/WEB-INF/jspf/HomeDeslogado.jspf
+++ b/web/WEB-INF/jspf/HomeDeslogado.jspf
@@ -1,84 +1,18 @@
-<%-- 
-    Document   : home
-    Created on : 12/10/2017, 15:56:08
-    Author     : Gabriel
---%>
-
-<%@page import="br.com.fatecpg.quiz.Quiz"%>
+<body id="page-top">
+    <%@page import="br.com.fatecpg.quiz.Quiz"%>
 <%@page import="java.text.DecimalFormat"%>
 <%@page import="java.util.Collections"%>
 <%@page import="br.com.fatecpg.quiz.Organizar"%>
 <%@page import="java.util.ArrayList"%>
 <%@page import="br.com.fatecpg.quiz.Ranking"%>
 <%@page import="br.com.fatecpg.quiz.Ranking"%>
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
-<!DOCTYPE html>
-<html>
-    <%
+<%
     DecimalFormat ff1 = new DecimalFormat("#");
     DecimalFormat ff = new DecimalFormat("0");
     double lastGrade = 100.0 * Quiz.getUltNota();
     %>
-    <%@include file="WEB-INF/jspf/header.jspf" %>
-    <body id="page-top">  
-        <%if(session.getAttribute("teste") !=null){
-            String teste = session.getAttribute("teste").toString();
-        %>
-            <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="home.jsp">WebQuiz</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <form><input class="btn btn-primary" type="submit" name="btnSair" value="Sair"/></form>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <header class="masthead">
-      <div class="header-content">
-        <div class="header-content-inner">
-          <h1 id="homeHeading">Ol√°,<%=teste%> </h1><br/>
-          <hr>
-          <p style="color:white">Clique no bot√£o abaixo para iniciar seu teste!</p>
-          <form><input class="btn btn-primary" type="submit" name="btnTeste" value="Iniciar Teste"/></form>
-        </div>
-      </div>
-    </header>
-    
-    <section class="bg-primary" id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 mx-auto text-center">
-            √öltimos 10 testes<table class='table' border='1'>
-                        <thead>  
-                            <th>Pontua√ß√£o</th>
-                        </thead>  
-                        <tbody>    
-                            <%
-                                ArrayList<Ranking> ranking = Ranking.ranking;
-                                Collections.sort(ranking, new Organizar());  
-                                for (Ranking pontos : ranking) {%>
-                            <tr>
-                                <td>
-                                    
-                                    <%= ff.format(pontos.getPontos())%> <!--//pontua√ß√£o atual-->
-                                </td>
-                            </tr>
-                            <%}%>
-                        </tbody>
-                    </table>
-    </section>
-                        
-        
-      <%}else
-            {%>
-                <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="home.jsp">WebQuiz</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -100,10 +34,10 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <h1 id="homeHeading">WebQuiz</h1><br/><h2>Melhor maneira de testar sua experi√™ncia!</h2>
+          <h1 id="homeHeading">WebQuiz</h1><br/><h2>Melhor maneira de testar sua experiÍncia!</h2>
           <hr>
-          <p style="color:white">Quiz para testar seu conhecimento! Perguntas envolvendo hist√≥ria, geografia e conhecimentos gerais! Clique no bot√£o abaixo para iniciar sua sess√£o!</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="index.jsp">Iniciar sess√£o</a>
+          <p style="color:white">Quiz para testar seu conhecimento! Perguntas envolvendo histÛria, geografia e conhecimentos gerais! Clique no bot„o abaixo para iniciar sua sess„o!</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="index.jsp">Iniciar sess„o</a>
         </div>
       </div>
     </header>
@@ -112,10 +46,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3 mx-auto text-center">
-            √öltimos 10 participantes<table class='table' border='1'>
-                        <thead>  <!--//tabela cabe√ßalho-->
+            ⁄ltimos 10 participantes<table class='table' border='1'>
+                        <thead>  <!--//tabela cabeÁalho-->
                             <th>Pessoa</th>
-                            <th>Pontua√ß√£o</th>
+                            <th>PontuaÁ„o</th>
                         </thead>  
                         <tbody>    <!--//tabela corpo-->
                             <%
@@ -133,14 +67,14 @@
                         </tbody>
                     </table>
 			10 melhores participantes<table class='table' border='1'>
-                        <thead>  <!--//tabela cabe√ßalho-->
+                        <thead>  <!--//tabela cabeÁalho-->
                             <th>Pessoa</th>
-                            <th>Pontua√ß√£o</th>
+                            <th>PontuaÁ„o</th>
                         </thead>  
                         <tbody>    <!--//tabela corpo-->
                              <%
                                 ArrayList<Ranking> ranking2 = Ranking.ranking;
-                                Collections.sort(ranking2, new Organizar());  //coloca em ordem ranking pela pontua√ßao
+                                Collections.sort(ranking2, new Organizar());  //coloca em ordem ranking pela pontuaÁao
                                 for (Ranking pontos : ranking2) {%>
                             <tr>
                                 <td>
@@ -157,7 +91,9 @@
         </div>
       </div>
     </section>
-                            <section id="services">
+
+
+    <section id="services">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -192,25 +128,3 @@
         </div>
       </div>
     </section>
-                
-
-            <%}
-                if (request.getParameter("btnSair") != null)
-                    {
-                        session.invalidate();
-                        response.sendRedirect("home.jsp");
-
-                    }
-                if (request.getParameter("btnTeste") != null){
-                    response.sendRedirect("teste.jsp");
-
-
-                    }
-             %>
-      
-        
-        
-        
-    <%@include file="WEB-INF/jspf/footer.jspf" %>    
-    </body>
-</html>
